<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/amount"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/etBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/bill"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/num_of_pax"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/paxInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/pax"/>

    <Switch
        android:id="@+id/switchDropdown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/any_discounts"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <LinearLayout
        android:id="@+id/dropdownLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discount"
            android:visibility="visible" />

    <EditText
        android:id="@+id/discount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/total_discount"
        android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/gstbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst" />

        <ToggleButton
            android:id="@+id/svsbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <RadioButton
                android:id="@+id/paynow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paynow"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        </RadioGroup>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/dropdownLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textViewDropdown1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/phone_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <EditText
        android:id="@+id/phoneno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/please_enter_your_phone_number"
        android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <Button
            android:id="@+id/splitbtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/split"
            app:backgroundTint="#00BCD4"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/resetbtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            app:backgroundTint="#00BCD4" />

    </LinearLayout>

    <TextView
        android:id="@+id/ttlbill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/total_bill"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/eachpay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/each_pays"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</LinearLayout>
